OWLS-95596: Scale cluster through Operator REST API  by patching Cluster Resource (#3237)
* Add REST scaling by patching Cluster Resource